# autoSAXS

./: .gitignore  .gitlab-ci.yml  .importlinter  AGENTS.md  LICENSE  README.md  api_calls.py  autosaxs_skills_explained.md  autosaxs_skills_explained.py  calibration_app.py  calibration_service.py  calibrator.py  cli_interface.py  command.txt  commit.sh  context.py  controller.py  deepseek_experimental_stripped.ipynb  deploy.sh  event_bus.py  experimental.ipynb  experimental_stripped.ipynb  fast2dprocess_gui.py  gui.py  gui_interface.py  guisaxs.py  integrate.py  interface.py  pipeline.py  polydispfit.py  processor.py  pyproject.toml  requirements.txt  requirements_loosen.txt  saxs_controller.py  saxs_controller_device.py  test.ipynb  test.py  this_is_for_fake_commit.txt  utils.py  (+1 more)
.cursor/commands/: check-spec-agreement.md  commit.md  implement-spec.md  modify-in-spec.md
.cursor/rules/: agent-suggestions.mdc  python-interpreter.mdc  reuse-existing-functionality.mdc
.ipynb_checkpoints/: deepseek_experimental-checkpoint.ipynb  deepseek_experimental_stripped-checkpoint.ipynb  experimental-checkpoint.ipynb
autosaxs/: __init__.py  api.py  autocalib.py  autocalib_viz.py  cli.py  cli_interface.py  context.py  gui.py  gui_interface.py  guinier.py  mixture.py  path_expression.py  polydispfit.py  processor.py  report.py  saxs_controller.py  skill.py  skill_wrap.py  utils.py  viewer.py
autosaxs-docs/: skills_reference.md
autosaxs/cli/: cli.py  deferred_pip_upgrade.py  package_update.py
autosaxs/core/: gnom.py  gnom_quality.py  guinier.py  integrator.py  kratky.py  pddf.py  processor.py  report.py  report_fragments.py  utils.py  viewer.py  viewer_interface.py
autosaxs/foreign/: __init__.py
autosaxs/pipeline/: __init__.py  api.py  cli_interface.py  gui.py  gui_interface.py  saxs_controller.py
autosaxs/resources/: agent_quickstart.txt  config_base.conf
autosaxs/skill/: __init__.py  analyze_kratky.py  average.py  calibrate.py  common.py  config.py  deps.py  fit_bodies.py  fit_dammif.py  fit_distances.py  fit_mixture.py  fit_sizes.py  guinier_analysis.py  integrate.py  integrate_proxy.py  model_density.py  path_expression.py  plot.py  plot_2d.py  process_monodisperse.py  report_individual.py  report_summary.py  skill_wrap.py  subtract.py
autosaxs/tests/: __init__.py  test_fit_sizes_extensions.py  test_gnom_quality.py  test_report_fragments.py
docs/: fast2dprocess_gui_spec.md  guisaxs_liveview_spec.md  guisaxs_skills_design.md  guisaxs_skills_spec.md  guisaxs_spec.md  pipeline_interactive_spec.md  readme_header.md  skills_paradigm.md
examples/monodisperse_protein/: AgBh700_96.9_calib.tif  ihs27_buffer.tif  ihs27_sample.tif  mask-20260706_133745.txt
fast2dprocess_gui/: __init__.py  __main__.py
fast2dprocess_gui/core/: __init__.py  constants.py  interfaces.py  style.py
fast2dprocess_gui/gui/: __init__.py  control_panel.py  curves_tab_1d.py  image_tab_2d.py  main_window.py  widgets.py
fast2dprocess_gui/models/: __init__.py  calibration_manager.py  config_manager.py  data_manager.py  processing_manager.py
fast2dprocess_gui/services/: __init__.py  calibration_service.py  processing_service.py
fast2dprocess_gui/utils/: __init__.py  threading_env.py
global/: primus_models.yml
global/templates/: primus.txt
guisaxs/: __init__.py  __main__.py  calibration_subprocess.py
guisaxs/core/: __init__.py  constants.py  event_bus.py  interfaces.py  style.py
guisaxs/gui/: __init__.py  control_panel.py  curves_tab_1d.py  image_tab_2d.py  main_window.py  widgets.py
guisaxs/models/: __init__.py  config_manager.py  data_manager.py  processing_manager.py
guisaxs/services/: __init__.py  calibration_service.py
guisaxs/utils/: __init__.py  filename_utils.py
guisaxs_liveview/: README.md  __main__.py  viewer3d.py
guisaxs_skills/: README.md  app.py
guisaxs_skills/core/: events.py  models.py  settings.py
guisaxs_skills/liveview/: __init__.py  app.py  dir_tree_observer.py  executor.py  jobs.py  pipeline.py  poll_watcher.py  queue.py  session_persistence.py  state.py  watcher.py  window.py  workdir.py  worker.py
guisaxs_skills/logic/: autosaxs_cli.py  default_output_dir.py  inputs_copy.py  package_update.py  runner_qprocess.py  session_state.py  skill_catalog.py  smart_defaults.py  workdir.py
guisaxs_skills/ui/: catalog_tabs.py  curve_plot.py  data_panel.py  html_help_dialog.py  isosurface_mesh_data.py  main_window.py  path_field.py  preview_panel.py  saxs_interactive_3d.py  skill_form.py  style.py  toast.py  update_dialog.py
helpers/: run_precommit_updates.sh  run_tests.sh
pipelines/: pipeline0.txt  protein_v0.txt
prompts/visual/: loglog_plot.txt  saxs_1d.txt
resources/: validation_config.conf
scripts/: 2026_Pt_NPs_kinetic_analysis.py  241225_dummy.py  241225_pca.py  260401_AuNP.py  batch_tif_mixture_kl_target.py  benchmark_polydispfit.py  calibrate_image.py  debug_unstable_rg_simple_analysis.py  extract_tif_datetimes_to_csv.py  fit_mixture_one_curve.py  pca_to_saxs_1d.py  plot_mixture_pdf_difference.py  plot_rg_vs_time.py  process_multi_saxs_dat.py  read_tif_meta.py  saxs_analysis_corrected.py  setup_validation_data.py  validate_xml_descriptors.py  xml_to_html.py
skills/autocalib/: SKILL.md  autocalib.py
skills/get-simple-saxs-descriptors/: SKILL.md  get_descriptors.py
skills/integrate/: SKILL.md  integrate.py
skills/subtract/: SKILL.md  subtract.py
src/autosaxs/: __init__.py
src/guisaxs_skills/: __main__.py  app.py
tests/: __init__.py  bench_autocalib_ring_analysis.py  test.ipynb  test_calib_integration.py  test_center_grad_ls.py  test_guisaxs.py  test_guisaxs_liveview.py  test_ring_sources_divergence_gmm.py  test_skill.py  test_skills_real_data.py
tests/optional/: bench_autocalib_ring_analysis.py  diag_center_bias_alignment_gate.py  test_center_grad_ls.py  test_center_grad_ls_v0.py  test_center_grad_ls_v0_elite_refine.py  (+3 more)
(+340 files in other folders)
