[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosaxs"
version = "1.4.1"
description = "Interactive SAXS pipeline core: calibration, integration, subtraction, ATSAS descriptors, plots, shape fitting, reports"
requires-python = ">=3.9"
license = "MIT"
authors = []
keywords = ["saxs", "small-angle scattering", "pyFAI", "ATSAS", "calibration", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase",
    "fabio",
    "matplotlib",
    "numpy",
    "pandas",
    "pyFAI",
    "PyYAML",
    "reportlab",
    "sasmodels",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "squarify",
    "openai",
    "requests",
    "httpx",
]

[project.scripts]
autosaxs = "autosaxs.cli:main"
guisaxs = "guisaxs.__main__:main"
guisaxs-skills = "guisaxs_skills.__main__:main"

[project.optional-dependencies]
gui = ["customtkinter", "tkinterdnd2", "PyQt5"]
dev = ["build", "pip"]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosaxs*", "guisaxs*", "guisaxs_skills*"]

[tool.setuptools.package-data]
autosaxs = [
    "global/*.yml",
    "global/templates/*",
    "prompts/**/*.txt",
    "pipelines/*.txt",
]
