[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosaxs"
version = "2.4.1"
description = "Interactive SAXS pipeline core: calibration, integration, subtraction, ATSAS descriptors, plots, shape fitting, reports. After install, run `autosaxs --help`: epilog lists get-readme, get-skills, get-default-config (export docs and default config into your workspace)."
requires-python = ">=3.9"
license = "MIT"
authors = []
keywords = ["saxs", "small-angle scattering", "pyFAI", "ATSAS", "calibration", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase",
    "fabio",
    "matplotlib",
    "numpy",
    "pandas",
    "pyFAI",
    "PyYAML",
    "reportlab",
    "sasmodels",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "squarify",
    "openai",
    "requests",
    "httpx",
]

[project.scripts]
autosaxs = "autosaxs.cli:main"
guisaxs = "guisaxs.__main__:main"
guisaxs-skills = "guisaxs_skills.__main__:main"
guisaxs-liveview = "guisaxs_liveview.__main__:main"

[project.optional-dependencies]
gui = ["customtkinter", "tkinterdnd2", "PyQt5", "watchdog"]
dev = ["build", "pip", "import-linter"]

[tool.setuptools.packages.find]
where = ["."]
include = ["autosaxs*", "guisaxs*", "guisaxs_skills*", "guisaxs_liveview*"]

[tool.setuptools.package-data]
autosaxs = [
    "resources/agent_quickstart.txt",
    "resources/config_base.conf",
    "resources/global/*.yml",
    "resources/global/templates/*",
    "resources/prompts/**/*.txt",
    "resources/pipelines/*.txt",
    "resources/readme/*.md",
    "resources/ai_skills/*.md",
]
