[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosaxs"
version = "2.11.1"
description = "Interactive SAXS pipeline core: calibration, integration, subtraction, ATSAS descriptors, plots, shape fitting, reports. After install, run `autosaxs --help`: epilog lists get-docs, get-skills, get-default-config (export docs and default config into your workspace)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Mikhail S. Lifar", email = "mikhailkulkov11@gmail.com" },
]
keywords = ["saxs", "small-angle scattering", "pyFAI", "ATSAS", "calibration", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase",
    "fabio",
    "matplotlib",
    "mcsas3>=1.0.6",
    "numpy",
    "pandas",
    "pyFAI",
    "PyYAML",
    "reportlab",
    "sasmodels",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "squarify",
    "openai",
    "requests",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/MikhailLifar/autoSAXS"
Repository = "https://github.com/MikhailLifar/autoSAXS"

[project.scripts]
autosaxs = "autosaxs.cli:main"
guisaxs-skills = "guisaxs_skills.__main__:main"
guisaxs-liveview = "guisaxs_liveview.__main__:main"

[project.optional-dependencies]
gui = ["customtkinter", "PyQt5", "watchdog"]
dev = ["build", "pip", "import-linter"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["autosaxs*", "guisaxs_skills*", "guisaxs_liveview*"]

[tool.setuptools.package-data]
autosaxs = [
    "resources/agent_quickstart.txt",
    "resources/config_base.conf",
    "resources/prompts/**/*.txt",
    "resources/readme/*.md",
    "resources/readme/images/**/*",
    "resources/ai_skills/*.md",
    "resources/schemas/*.json",
    "resources/help/guisaxs_liveview/**/*",
]
